--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "zombie server",
   "main": "server.js",
   "dependencies": {
-    "websocket": "*",
-    "uws": "*"
+    "uws": "^9.14.0",
+    "websocket": "^1.0.25"
   },
   "devDependencies": {},
   "scripts": {
